@@ -30,24 +30,22 @@ int main()
   int n;
   std::cin >> n;
   for (int i = 0; i < n; ++i) {
-    double s0_in, s1_in, e0, jxy, jz;
-    std::cin >> s0_in >> s1_in >> e0 >> jxy >> jz;
+    double s0_in, s1_in, C, jxy, jz;
+    std::cin >> s0_in >> s1_in >> C >> jxy >> jz;
     looper::site_parameter<> s0(s0_in);
     looper::site_parameter<> s1(s1_in);
-    looper::xxz_matrix<> xxz(s0, s1, e0, jxy, jz);
+    looper::xxz_matrix<> xxz(s0, s1, C, jxy, jz);
 
     std::cout << "input parameters: S0 = " << s0.s() << ", S1 = " << s1.s()
-              << ", e0 = " << e0 << ", Jxy = " << jxy << ", Jz = " << jz
+              << ", C = " << C << ", Jxy = " << jxy << ", Jz = " << jz
               << std::endl << xxz << std::endl;
 
-    boost::tuple<bool, double, double, double> fit =
-      looper::fit2xxz(s0, s1, xxz);
+    bool success;
+    looper::xxz_parameter p;
+    boost::tie(success, p) = looper::fit2xxz(xxz);
 
-    if (fit.get<0>()) {
-      std::cout << "fitting result: e0 = " << fit.get<1>()
-                << ", Jxy = " << fit.get<2>()
-                << ", Jz = " << fit.get<3>()
-                << std::endl;
+    if (success) {
+      std::cout << "fitting result: " << p << std::endl;
     } else {
       std::cout << "fitting failed\n";
     }
