@@ -1,15 +1,15 @@
-input parameters: S0 = 1/2, S1 = 1/2, e0 = 0, Jxy = 1, Jz = 1
+input parameters: S0 = 1/2, S1 = 1/2, C = 0, Jxy = 1, Jz = 1
 [4,4]((-0.25,0,0,0),(0,0.25,-0.5,0),(0,-0.5,0.25,0),(0,0,0,-0.25))
-fitting result: e0 = 0, Jxy = 1, Jz = 1
-input parameters: S0 = 1/2, S1 = 1, e0 = 0, Jxy = -1, Jz = -0.5
+fitting result: C = 0, Jxy = 1, Jz = 1
+input parameters: S0 = 1/2, S1 = 1, C = 0, Jxy = -1, Jz = -0.5
 [6,6]((0.25,0,0,0,0,0),(0,0,0,0.707107,0,0),(0,0,-0.25,0,0.707107,0),(0,0.707107,0,-0.25,0,0),(0,0,0.707107,0,0,0),(0,0,0,0,0,0.25))
-fitting result: e0 = 0, Jxy = -1, Jz = -0.5
-input parameters: S0 = 1, S1 = 1, e0 = 0, Jxy = 1, Jz = 1
+fitting result: C = 0, Jxy = -1.63299, Jz = -0.5
+input parameters: S0 = 1, S1 = 1, C = 0, Jxy = 1, Jz = 1
 [9,9]((-1,0,0,0,0,0,0,0,0),(0,0,0,-1,0,0,0,0,0),(0,0,1,0,-1,0,0,0,0),(0,-1,0,0,0,0,0,0,0),(0,0,-1,0,0,0,-1,0,0),(0,0,0,0,0,0,0,-1,0),(0,0,0,0,-1,0,1,0,0),(0,0,0,0,0,-1,0,0,0),(0,0,0,0,0,0,0,0,-1))
-fitting result: e0 = 0, Jxy = 1, Jz = 1
-input parameters: S0 = 1/2, S1 = 3/2, e0 = 0.33, Jxy = 1, Jz = 1
+fitting result: C = 0, Jxy = 1, Jz = 1
+input parameters: S0 = 1/2, S1 = 3/2, C = 0.33, Jxy = 1, Jz = 1
 [8,8]((-0.42,0,0,0,0,0,0,0),(0,0.08,0,0,-0.866025,0,0,0),(0,0,0.58,0,0,-1,0,0),(0,0,0,1.08,0,0,-0.866025,0),(0,-0.866025,0,0,1.08,0,0,0),(0,0,-1,0,0,0.58,0,0),(0,0,0,-0.866025,0,0,0.08,0),(0,0,0,0,0,0,0,-0.42))
-fitting result: e0 = 0.33, Jxy = 1, Jz = 1
-input parameters: S0 = 3/2, S1 = 3/2, e0 = 0.3, Jxy = -1.2, Jz = 0.01
+fitting failed
+input parameters: S0 = 3/2, S1 = 3/2, C = 0.3, Jxy = -1.2, Jz = 0.01
 [16,16]((0.2775,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0),(0,0.2925,0,0,1.8,0,0,0,0,0,0,0,0,0,0,0),(0,0,0.3075,0,0,2.07846,0,0,0,0,0,0,0,0,0,0),(0,0,0,0.3225,0,0,1.8,0,0,0,0,0,0,0,0,0),(0,1.8,0,0,0.2925,0,0,0,0,0,0,0,0,0,0,0),(0,0,2.07846,0,0,0.2975,0,0,2.07846,0,0,0,0,0,0,0),(0,0,0,1.8,0,0,0.3025,0,0,2.4,0,0,0,0,0,0),(0,0,0,0,0,0,0,0.3075,0,0,2.07846,0,0,0,0,0),(0,0,0,0,0,2.07846,0,0,0.3075,0,0,0,0,0,0,0),(0,0,0,0,0,0,2.4,0,0,0.3025,0,0,1.8,0,0,0),(0,0,0,0,0,0,0,2.07846,0,0,0.2975,0,0,2.07846,0,0),(0,0,0,0,0,0,0,0,0,0,0,0.2925,0,0,1.8,0),(0,0,0,0,0,0,0,0,0,1.8,0,0,0.3225,0,0,0),(0,0,0,0,0,0,0,0,0,0,2.07846,0,0,0.3075,0,0),(0,0,0,0,0,0,0,0,0,0,0,1.8,0,0,0.2925,0),(0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0.2775))
-fitting result: e0 = 0.3, Jxy = -1.2, Jz = 0.01
+fitting result: C = 0.3, Jxy = -1.2, Jz = 0.01
